--- a/wa/r10/r10.md
+++ b/wa/r10/r10.md
@@ -13,15 +13,12 @@ math: mathjax
 ## Contents
 
 - Homework 5 讲评
-- 单例模式
 - 拷贝控制：总结
   - 何时使用
-  - 默认行为以及三/五法则
+  - 默认行为以及五法则
   - 特别技术：copy-and-swap
   - 一个例子
-- 其它零碎的知识点
-  - `friend`
-  - `emplace_back`, `make_shared` 等函数：“完美转发”
+- 单例模式
 
 ---
 
@@ -176,7 +173,6 @@ struct X {
 
 - 重要例外：一个类不能没有析构函数 ~~就像...~~
 - 另一个例外：兼容旧的代码
-  - 在 C++98 时代，“三法则”并未在编译器的行为上予以体现。
   - 如果一个类有自定义的拷贝构造函数或析构函数，而没有自定义拷贝赋值运算符，C++98 编译器会合成这个拷贝赋值运算符。（拷贝构造函数同理）
   - 为了兼容旧的代码，不能直接禁止这种行为，只能将它判定为 deprecated。
 
