--- a/wa/r15/r15.md
+++ b/wa/r15/r15.md
@@ -715,6 +715,8 @@ int main() {
 
 ## **S**ubstitution **F**ailure **I**s **N**ot **A**n **E**rror (SFINAE)
 
+* “替换失败不是错误” (Substitution Failure Is Not An Error) 
+
 例：在测试中给出更好的报错信息
 
 假设 `ca` 是一个 `const Dynarray`，我要检查 `ca.size()` 是否能编译。
